# base-boost_serialization

./: CMakeLists.txt  README.md  manifest.xml
src/: BaseNumeric.hpp  BoostTypes.hpp  CMakeLists.txt  ClassVersion.hpp  Dummy.cpp  Dummy.hpp  DynamicSizeSerialization.hpp  EigenTypes.hpp  Main.cpp  boost_serialization.pc.in
test/: CMakeLists.txt  test_Dummy.cpp  test_serialization.cpp
